<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_add">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/layout_notification"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:foreground="?attr/selectableItemBackground"
                android:background="?attr/selectableItemBackground">

                <ImageView
                    android:id="@+id/iv_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/ic_add_activity_notification"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/iv_notification"
                    android:orientation="vertical"
                    android:layout_marginLeft="40dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/mainTextColor1"
                        android:text="@string/choose_notification"/>
                    <TextView
                        android:id="@+id/activity_add_notification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/mainTextColor1"
                        android:textSize="10sp"
                        android:text="@string/notification_nothing"/>
                </LinearLayout>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#4fa3a3a3"
                />

            <RelativeLayout
                android:id="@+id/layout_Repeat"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:foreground="?attr/selectableItemBackground"
                android:background="?attr/selectableItemBackground">

                <ImageView
                    android:id="@+id/iv_Repeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/ic_add_activity_repeat"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/iv_Repeat"
                    android:orientation="vertical"
                    android:layout_marginLeft="40dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000"
                        android:text="@string/choose_repeat"/>
                    <TextView
                        android:id="@+id/activity_add_repeatData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/mainTextColor1"
                        android:textSize="10sp"
                        android:text="@string/repeat_no_repeat"/>
                </LinearLayout>

                <Switch
                    android:id="@+id/activity_add_isRepeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#4fa3a3a3"
                />
            <RelativeLayout
                android:id="@+id/layout_operation"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:foreground="?attr/selectableItemBackground"
                android:background="?attr/selectableItemBackground">

                <ImageView
                    android:id="@+id/iv_operation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/ic_add_activity_operation"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/iv_operation"
                    android:orientation="vertical"
                    android:layout_marginLeft="40dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000"
                        android:text="@string/choose_operation"/>
                    <TextView
                        android:id="@+id/activity_add_operationData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/mainTextColor1"
                        android:textSize="10sp"
                        android:text="@string/operation_nothing"/>
                </LinearLayout>

                <Switch
                    android:id="@+id/activity_add_isOperation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#4fa3a3a3"
                />
            <RelativeLayout
                android:id="@+id/layout_priority"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:background="?attr/selectableItemBackground">
                <ImageView
                    android:id="@+id/iv_priority"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/ic_add_activity_level"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/iv_priority"
                    android:orientation="vertical"
                    android:layout_marginLeft="40dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000"
                        android:text="@string/choose_priority"/>
                    <TextView
                        android:id="@+id/activity_add_priority"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/mainTextColor1"
                        android:textSize="10sp"
                        android:text="@string/priority_1"/>
                </LinearLayout>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#4fa3a3a3"
                />

            <RelativeLayout
                android:id="@+id/layout_Category"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:foreground="?attr/selectableItemBackground"
                android:background="?attr/selectableItemBackground">

                <ImageView
                    android:id="@+id/iv_Category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/ic_add_activity_category"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/iv_Category"
                    android:orientation="vertical"
                    android:layout_marginLeft="40dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000"
                        android:text="类别"/>
                    <TextView
                        android:id="@+id/activity_add_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/mainTextColor1"
                        android:textSize="10sp"
                        android:text="Inbox"/>
                </LinearLayout>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#4fa3a3a3"
                />
            <RelativeLayout
                android:id="@+id/layout_extraData"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:background="?attr/selectableItemBackground">
                <!--注意这里的波纹触发效果低版本不兼容-->
                <ImageView
                    android:id="@+id/iv_extraData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/ic_add_activity_file"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/iv_extraData"
                    android:orientation="vertical"
                    android:layout_marginLeft="40dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000"
                        android:text="@string/choose_extraData"/>
                    <TextView
                        android:id="@+id/activity_add_extraData"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/mainTextColor1"
                        android:textSize="10sp"
                        android:text="@string/extradata_nothing"/>
                </LinearLayout>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#4fa3a3a3"
                />
            <RelativeLayout
                android:id="@+id/layout_remarks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground"
                android:background="?attr/selectableItemBackground"
                >
                <ImageView
                    android:id="@+id/iv_remarks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/ic_add_activity_remarks"/>
                <EditText
                    android:id="@+id/activity_add_remarks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="75dp"
                    android:layout_marginTop="5dp"
                    android:lines="6"
                    android:background="@null"
                    android:textSize="14sp"
                    android:hint="@string/remarks"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#4fa3a3a3"
                />

        </LinearLayout>
</android.support.v4.widget.NestedScrollView>
